--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5321126319022507"
+     crossorigin="anonymous"></script>	
 <title>Everything Converter – Convert Anything Instantly</title>
 <meta name="description" content="Convert any unit fast: 3000+ converters across 21 categories including length, speed, galactic, cooking, and digital.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
