--- a/index.html
+++ b/index.html
@@ -3795,10 +3795,9 @@ document.getElementById('quick-select').addEventListener('change', e => {
       <h3 style="color:#ffffff; margin-bottom:15px;">Contact</h3>
       <p style="font-size:14px; line-height:1.7;">
         For support, suggestions, or general inquiries, please reach out to us:
-        <br><strong>Email:</strong> <a href="mailto:contact@everythingconverter.com" style="color:#00ffe0; text-decoration:none;">contact@everythingconverter.com</a>
-        <br><strong>Contact Form:</strong> <a href="#contact" style="color:#00ffe0; text-decoration:none;">Click here</a>
-      </p>
+        <br><strong>Email:</strong> <a href="mailto:manches2021@outlook.com" style="color:#00ffe0; text-decoration:none;">manches2021@outlook.com</a>
     </section>
+
 
     <!-- Legal Information -->
     <section style="flex:1; min-width:260px;">
